# film_details_searcher

./: .gitignore  .replit  CHANGELOG.md  LICENCE  README.md  pyproject.toml  requirements.txt
film_details_searcher/: __main__.py
film_details_searcher/film_details_searcher/: __init__.py
film_details_searcher/film_details_searcher/models/: __init__.py  film_details.py  movie.py  search_result.py  select_menu.py
film_details_searcher/film_details_searcher/scrappers/: __init__.py  custom_headers.py  filmweb_movie_service.py  filmweb_scraper.py  google_movie_search_engine.py  google_scraper.py  movie_search_engine.py  movie_searcher.py  movie_service.py
film_details_searcher/tests/models/: test_movie.py  test_search_result.py  test_select_menu.py
film_details_searcher/tests/scrappers/: test_custom_headers.py  test_filmweb_movie_service.py  test_google_movie_search_engine.py  test_movie_search_engine.py
